feat : form builder created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
 <app-top-bar></app-top-bar>
 <app-product-list></app-product-list>
 <app-little-tour></app-little-tour>
+<app-first-form></app-first-form>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
